--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             COVID Vaccination Stories
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfcElv5dlXInR7XHQz27_OcYJlWcIUr-GBbc-ocefWlGd1uXg/viewform?embedded=true" target="_blank">
-				<button id="surveyButton">Take the Survey</button>
+				<button id="surveyButton">Take The Survey</button>
 			</a>
 		</header>
 
