--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <header>
-            COVID Vaccination Stories (2019-2024)
+            COVID Vaccination Stories (2019-2024)!
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfcElv5dlXInR7XHQz27_OcYJlWcIUr-GBbc-ocefWlGd1uXg/viewform?embedded=true" target="_blank">
 				<button id="surveyButton">Take the Survey</button>
 			</a>
