paige changed the js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="styles/style.css">
 
+        <!-- Overlapping Markers JavaScript -->
+        <script src="https://unpkg.com/maplibre-randomize-overlapping-markers/dist/bundle.js"></script>
+        
         <!-- MapLibreGL's css-->
         <link rel="stylesheet" href="https://unpkg.com/maplibre-gl/dist/maplibre-gl.css" />
 
@@ -17,7 +20,7 @@
 
     <body>
         <header>
-            COVID Vaccination Stories : Paige WU was here!
+            never gonna give you up never gonna let you down
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfcElv5dlXInR7XHQz27_OcYJlWcIUr-GBbc-ocefWlGd1uXg/viewform?embedded=true" target="_blank">
 				<button id="surveyButton">Take the Survey</button>
 			</a>
@@ -35,6 +38,6 @@
         <div id="footer">
             Copyright(2024)
         </div>
-        <script src="js/init.js"></script>
+        <script type="module" src="js/init.js"></script>
     </body>
 </html>
