--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <!-- MapLibreGL's JavaScript-->
         <script src="https://unpkg.com/maplibre-gl/dist/maplibre-gl.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+        
+        <!-- Overlapping Markers JavaScript -->
+        <script src="https://unpkg.com/maplibre-randomize-overlapping-markers/dist/bundle.js"></script>
     </head>
 
     <body>
@@ -35,6 +38,6 @@
         <div id="footer">
             Copyright(2024)
         </div>
-        <script src="js/init.js"></script>
+        <script type="module" src="js/init.js"></script>
     </body>
 </html>
